Updated | CSS colors, flexbox overlap issues, and font properties

--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,64 @@
 /* the body container */
 #flexConZ {
-  padding: 30px;
   display: flex;
   flex-direction: column;
-  background-color: seashell;
+  background-color: rgb(246, 252, 243);
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.3rem;
 }
 /* the header */
 #flexItemA {
   margin-bottom: 70px;
   width: auto;
   text-align: center;
-  
+  background-color: rgb(164, 188, 143);
 }
 
 /* the main container */
 #flexConB {
   display: flex;
+  margin: 30px;
 }
 /* the results list */
 #flexItemD {
-  min-width: 300px;
   order: 1;
-  flex: 1;
+  flex: 0 1 auto;
 }
+
+#flexItemD li {
+  margin-bottom: 10px;
+}
+
 
 /* the images and text container */
 #flexItemE {
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 20px;
   order: 2;
-  flex: 3 1 auto;
+  flex: 2 1 auto;
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-width: 750px;
 }
 
 #flexItemF {
   width: 100%;
 }
 
-#flexItemF > ul {
+#productUL {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 /* the lorem ipsum */
 #flexItemG {
-  padding: 30px;
+  margin-top: 20px;
+  padding: 20px;
+  max-width: 750px;
 }
-
 
 /* regular stuff */
 #chart {
@@ -61,8 +69,19 @@
 
 img {
   width: 250px;
+  cursor: pointer;
+  border: 2px dashed transparent;
+}
+
+img:hover {
+  border-color: gray;
 }
 
 h1 {
   font-size: 5rem;
+  line-height: 7rem;
+}
+
+strong {
+  font-weight: bold;
 }
